1.11: upgrade asm, java21